--- a/templates/usercreate.html
+++ b/templates/usercreate.html
@@ -1,21 +1,24 @@
 {% extends 'userbase.html' %}
 {% block body %}
+<div class="w3-container w3-teal">
+    <h1>CREATE USER</h1>
+</div>
 
-<h1>CREATE USER</h1>
 <desc style="color: red;">{{ error }}</desc>
-<form action="/createuser" method="POST">
-    <table>
-        <tr>
-            <label for="username">Username: </label>
-            <input type="text" name="username" id="username">
-            <br>
-            <label for="password">Password: </label>
-            <input type="password" name="password" id="password">
-            <br>
-            <input type="submit" value="Create User">
-        </tr>
-    </table>
-</form>
-<a href="/">Return to contents</a>
-
+<div class="w3-container">
+    <form action="/createuser" method="POST">
+        <table>
+            <tr>
+                <label for="username">Username: </label>
+                <input type="text" name="username" id="username" class="w3-input w3-border w3-light-grey">
+                <br>
+                <label for="password">Password: </label>
+                <input type="password" name="password" id="password" class="w3-input w3-border w3-light-grey">
+                <br>
+                <input type="submit" value="Create User" class="w3-btn w3-blue-grey">
+            </tr>
+        </table>
+    </form><br>
+    <a href="/" class="w3-btn w3-blue-grey">Return to contents</a>
+</div>
 {% endblock body %}
