--- a/templates/viewspell.html
+++ b/templates/viewspell.html
@@ -1,4 +1,4 @@
-{% extends "viewbase.html" %}
+{% extends "contents.html" %}
 {% block head %}
 {% for spell in spells %}
     <title>{{ spell.SpellName }}</title>
