--- a/templates/usercreate.html
+++ b/templates/usercreate.html
@@ -1,8 +1,8 @@
-{% extends 'userbase.html' %}
+{% extends 'contents.html' %}
+{% block h1 %}
+    Create Account
+{% endblock %}
 {% block body %}
-<div class="w3-container w3-teal">
-    <h1>CREATE USER</h1>
-</div>
 
 <desc style="color: red;">{{ error }}</desc>
 <div class="w3-container">
