--- a/templates/userlogin.html
+++ b/templates/userlogin.html
@@ -1,8 +1,8 @@
-{% extends 'userbase.html' %}
+{% extends 'contents.html' %}
+{% block h1 %}
+    Login
+{% endblock %}
 {% block body %}
-<div class="w3-container w3-teal">
-    <h1>LOGIN</h1>
-</div>
 <desc style="color: red;">{{ error }}</desc>
 <div class="w3-container">
     <form action="/login" method="POST">
