--- a/templates/addspell.html
+++ b/templates/addspell.html
@@ -115,7 +115,12 @@
     <br>
     <div>
         <label for="desc"><b>Description</b></label>
-        <textarea id="desc" type="text" name="spell_desc" class="w3-input w3-border"></textarea>
+        <textarea id="desc" type="text" name="spell_desc" class="w3-input w3-border" placeholder="Describe the spell"></textarea>
+    </div>
+    <br>
+    <div>
+        <label for="at_hl"><b>At Higher Levels</b></label>
+        <textarea id="at_hl" type="text" name="spell_athl" class="w3-input w3-border" placeholder="If the spell has additional features when used with higher level spell slots, put them here"></textarea>
     </div>
     <div>
         <label for="rit"><b>Ritual?</b></label>
